web/sites/all/themes/custom/myhaccp/sass/site/_ie7.scss
//
// IE 6 & 7 Compatibility
//

html.ie7,
html.ie6 {

  // Table borders as IE does not support :last-child.
  table {
    border-right: 1px solid $grey-4;
    border-bottom: 1px solid $grey-4;
  }

  // Header positioning
  header .header-region {
    position: relative;
    bottom: -20px;
    nav {
      margin-left: 0;
    }
  }

  // Main menu not floating
  header .header-region nav ul li {
    float: left;
    display: block;
    margin: 0;
    padding-right: 20px;
  }

  // Footer menu not floating
  .footer-inside .block-menu-block-7 ul li.leaf,
  .footer-inside .block-menu-block-8 ul li.leaf {
    float: left;
    margin-right: 0.5em;
  }
  .footer-inside .block-menu-block-8 {
    clear: both;
  }

  // Homepage grid not recognising box-sizing: border-box
  .node-homepage.view-mode-full {
    .group-left {
      width: 48%;
      padding-right: 2%;
    }
    .group-right {
      width: 48%;
      padding-left: 2%;
    }
  }

  // Inside page grid not recognising box-sizing: border-box
  body.sidebar-second {
    #main-content {
      padding-left: 3%;
      padding-right: 3%;
      width: 60%;
    }
    .region-sidebar-second {
      padding-left: 3%;
      padding-right: 3%;
      width: 19%;
    }
  }

  // Main menu (level 2), used in the help section not floating.
  .block-menu-block-2 ul {
    overflow: hidden;
    padding-bottom: 0.5em;
    li {
      float: left;
      display: block;
    }
  }

  // Pager on search results page.
  .page-search .pager li,
  .page-search .pager li.current {
    display: block;
    float: left;
  }

  // Web Tool
  // Web Tool pager
  .pager-wrapper .principles-wrapper {
    clear: both;
    width: 100%;
  }
  .pager-wrapper .pager-controls input {
    padding-left: 5px;
    padding-right: 5px;
  }

  // Principle 1.1
  .prep-d fieldset.instance .form-wrapper > .form-item,
  .principle-1-question-1 .hazards > .form-item {
    width: 45%;
    padding-left: 0;
    padding-right: 3%;
  }
  .p1q1-step .form-item input.step-name {
    width: 20em;
    min-width: 20em;
  }

  // Review pages
  .validation-stages .validation-stage h3 {
    float: left;
    width: 60%;
    display: block;
  }

  .validation-stages .validation-stage .validation-status {
    float: left;
    display: block;
    text-align: right;
  }

}

